option('readline', type: 'feature', value: 'auto', description: 'Enable readline support in console module')
option('pcre', type: 'feature', value: 'auto', description: 'Build PCRE module')
option('tk_gui', type: 'feature', value: 'auto', description: 'Build Tk GUI module')
option('sqlite', type: 'feature', value: 'auto', description: 'Build sqlite module')
option('sqlite3', type: 'feature', value: 'auto', description: 'Build sqlite3 module')
option('db_sqlite', type: 'feature', value: 'auto', description: 'Build Berkeley DB sqlite compatibility module')
option('dbi', type: 'feature', value: 'auto', description: 'Build libdbi module')
option('tokyo_cabinet', type: 'feature', value: 'auto', description: 'Build Tokyo Cabinet module')
option('tokyo_tyrant', type: 'feature', value: 'auto', description: 'Build Tokyo Tyrant module')
option('gd', type: 'feature', value: 'auto', description: 'Build GD module')
option('ffi', type: 'feature', value: 'auto', description: 'Build libffi module')
option('curl', type: 'feature', value: 'auto', description: 'Build libcurl module')
option('rrd', type: 'feature', value: 'auto', description: 'Build RRD module')
option('tcl_include', type: 'string', value: '', description: 'Path to Tcl headers (optional)')
option('tk_include', type: 'string', value: '', description: 'Path to Tk headers (optional)')
